--- a/plop-templates/ctrl/service.hbs
+++ b/plop-templates/ctrl/service.hbs
@@ -1,38 +1,40 @@
+{{#if script}}
+
 const Service = require('egg').Service
 
-class RoleService extends Service {
+class {{ properCase name }}Service extends Service {
   // create===============================================>
   async create(payload) {
-    return this.ctx.model.Role.create(payload)
+    return this.ctx.model.{{ properCase name }}.create(payload)
   }
 
   // destroy===============================================>  
   async destroy(_id) {
     const { ctx, service } = this
-    const role = await ctx.service.role.find(_id)
-    if (!role) {
-      ctx.throw(404, 'role not found')
+    const {{ name }} = await ctx.service.{{ name }}.find(_id)
+    if (!{{ name }}) {
+      ctx.throw(404, '{{ name }} not found')
     }
-    return ctx.model.Role.findByIdAndRemove(_id)
+    return ctx.model.{{ properCase name }}.findByIdAndRemove(_id)
   }
 
   // update===============================================>
   async update(_id, payload) {
     const { ctx, service } = this
-    const role = await ctx.service.role.find(_id)
-    if (!role) {
-      ctx.throw(404, 'role not found')
+    const {{ name }} = await ctx.service.{{ name }}.find(_id)
+    if (!{{ name }}) {
+      ctx.throw(404, '{{ name }} not found')
     }
-    return ctx.model.Role.findByIdAndUpdate(_id, payload)
+    return ctx.model.{{ properCase name }}.findByIdAndUpdate(_id, payload)
   }
 
   // show===============================================>
   async show(_id) {
-    const role = await this.ctx.service.role.find(_id)
-    if (!role) {
-      this.ctx.throw(404, 'role not found')
+    const {{ name }} = await this.ctx.service.{{ name }}.find(_id)
+    if (!{{ name }}) {
+      this.ctx.throw(404, '{{ name }} not found')
     }
-    return this.ctx.model.Role.findById(_id)
+    return this.ctx.model.{{ properCase name }}.findById(_id)
   }
 
   // index===============================================>
@@ -57,8 +59,8 @@ class RoleService extends Service {
     //   querys.reason = { $regex: height }
     // }
 
-    const res = await this.ctx.model.Role.find(querys).skip(skip).limit(pageSize).sort(sort).exec()
-    const count = await this.ctx.model.Role.countDocuments(querys).exec()
+    const res = await this.ctx.model.{{ properCase name }}.find(querys).skip(skip).limit(pageSize).sort(sort).exec()
+    const count = await this.ctx.model.{{ properCase name }}.count(querys).exec()
 
     // 整理数据源 -> Ant Design Pro
     const list = res.map((e, i) => {
@@ -73,14 +75,16 @@ class RoleService extends Service {
 
   // removes===============================================>
   async removes(values) {
-    return this.ctx.model.Role.remove({ _id: { $in: values } })
+    return this.ctx.model.{{ properCase name }}.remove({ _id: { $in: values } })
   }
 
   // Commons===============================================>
   async find(id) {
-    return this.ctx.model.Role.findById(id)
+    return this.ctx.model.{{ properCase name }}.findById(id)
   }
 
 }
 
-module.exports = RoleService
+module.exports = {{ properCase name }}Service
+
+{{/if}}
