--- a/plop-templates/ctrl/router.hbs
+++ b/plop-templates/ctrl/router.hbs
@@ -5,5 +5,6 @@
   router.put('/api/{{ name }}/:id', controller.{{ name }}.update)
   router.get('/api/{{ name }}/:id', controller.{{ name }}.show)
   router.get('/api/{{ name }}', controller.{{ name }}.index)
+  router.get('/api/{{ name }}/mine', controller.{{ name }}.mine)
   router.delete('/api/{{ name }}/:id', controller.{{ name }}.destroy)
   // ===================================
