--- a/plop-templates/ctrl/controller.hbs
+++ b/plop-templates/ctrl/controller.hbs
@@ -71,6 +71,20 @@ class {{ properCase name }}Controller extends Controller {
     ctx.helper.success({ctx, res})
   }
 
+  // 获取所有角色(分页/模糊)
+  async mine() {
+    const { ctx, service } = this
+
+    const _id = ctx.state.user.data._id
+    // 组装参数
+    const payload = ctx.query
+
+    // 调用 Service 进行业务处理
+    const res = await service.{{ name }}.index(payload, _id)
+    // 设置响应内容和响应状态码
+    ctx.helper.success({ctx, res})
+  }
+
   // 删除所选角色(条件id[])
   async removes() {
     const { ctx, service } = this
