完善单元测试代码

--- a/plop-templates/ctrl/service.hbs
+++ b/plop-templates/ctrl/service.hbs
@@ -58,7 +58,7 @@ class {{ properCase name }}Service extends Service {
     //   querys.reason = { $regex: height }
     // }
     if (id){
-      querys.user: id,
+      querys.user = id
     }
 
     const res = await this.ctx.model.{{ properCase name }}.find(querys).skip(skip).limit(pageSize).sort(sort).exec()
