--- a/plop-templates/ctrl/router.hbs
+++ b/plop-templates/ctrl/router.hbs
@@ -7,4 +7,5 @@
   router.get('/api/{{ name }}', controller.{{ name }}.index)
   router.get('/api/{{ name }}/mine', controller.{{ name }}.mine)
   router.delete('/api/{{ name }}/:id', controller.{{ name }}.destroy)
+  router.delete('/api/{{ name }}', controller.{{ name }}.removes)
   // ===================================
